fix overflow word on dropdown menu

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -179,6 +179,11 @@ nav ul.profile-dropdown button:active {
   transform: translateY(4px);
 }
 
+
+nav ul.profile-dropdown li {
+  overflow-wrap: break-word;
+}
+
 nav ul.profile-dropdown a {
   color: #FDEBD2;
   text-decoration: none;
